--- a/S08_IntroMecanicaVectorial.ipynb
+++ b/S08_IntroMecanicaVectorial.ipynb
@@ -79,12 +79,24 @@
     "La mecánica es una ciencia que estudia los cuerpos en reposo o en movimiento bajo la acción de fuerzas. Es esencial en el campo de la ingeniería, pues proporciona los métodos para analizar, diseñar y optimizar estructuras y dispositivos mecánicos. Se divide en tres ramas principales:\n",
     "\n",
     "- ***Mecánica de Cuerpos Rígidos:*** Comprende la estática y la dinámica. La estática se enfoca en cuerpos en reposo, analizando condiciones de equilibrio. La dinámica estudia los cuerpos en movimiento, considerando las leyes de Newton y otras teorías relacionadas.\n",
+    "\n",
+    "<p float=\"center\">\n",
+    "  <img src=\"https://github.com/carlosalvarezh/Geometria_Analitica_Vectorial/blob/main/Images/Mecanica01_RigidBody.jpeg?raw=true\" width=\"300\" />\n",
+    "</p>\n",
     "<p>&nbsp;</p>\n",
     "  \n",
     "- ***Mecánica de Cuerpos Deformables:*** Se ocupa de analizar cómo los materiales se deforman bajo diversas cargas, lo que es crucial para entender la resistencia y estabilidad de las estructuras. Incluye el estudio de esfuerzos, deformaciones y la relación entre ellos.\n",
+    "\n",
+    "<p float=\"center\">\n",
+    "  <img src=\"https://github.com/carlosalvarezh/Geometria_Analitica_Vectorial/blob/main/Images/Mecanica02_DeformableBody.png?raw=true\" width=\"300\" />\n",
+    "</p>\n",
     "<p>&nbsp;</p>\n",
     "\n",
-    "- ***Mecánica de Fluidos:*** Se divide en el estudio de fluidos incompresibles y compresibles. Importantes subdivisiones incluyen la hidráulica, que se enfoca en aplicaciones prácticas relacionadas con líquidos."
+    "- ***Mecánica de Fluidos:*** Se divide en el estudio de fluidos incompresibles y compresibles. Importantes subdivisiones incluyen la hidráulica, que se enfoca en aplicaciones prácticas relacionadas con líquidos.\n",
+    "\n",
+    "<p float=\"center\">\n",
+    "  <img src=\"https://github.com/carlosalvarezh/Geometria_Analitica_Vectorial/blob/main/Images/Mecanica03_Fluids.PNG?raw=true\" width=\"300\" />\n",
+    "</p>"
    ]
   },
   {
@@ -254,9 +266,9 @@
    "source": [
     "**Unidades Básicas del SI:**\n",
     "El Sistema Internacional de Unidades (SI) es un sistema universal utilizado en todo el mundo. Las unidades básicas del SI para longitud, masa y tiempo son:\n",
-    "- **Metro (m):** Originalmente definido como la diezmillonésima parte de la distancia del ecuador al polo, ahora se define como 1,650,763.73 longitudes de onda de la luz naranja-roja de la transición en el átomo de criptón-86.\n",
-    "- **Kilogramo (kg):** Aproximadamente igual a la masa de 0.001 m³ de agua, se define como la masa de un patrón de platino-iridio guardado en Sèvres, Francia.\n",
-    "- **Segundo (s):** Inicialmente definido como 1/86,400 del día solar medio, ahora se define como la duración de 9,192,631,770 ciclos de la radiación emitida por la transición entre dos niveles del estado fundamental del átomo de cesio-133.\n",
+    "- **Metro (m):** Originalmente definido como la diezmillonésima parte de la distancia del ecuador al polo, ahora se define como $1,650,763.73$ longitudes de onda de la luz naranja-roja de la transición en el átomo de *criptón-86*.\n",
+    "- **Kilogramo (kg):** Aproximadamente igual a la masa de $0.001 m^3$ de agua, se define como la masa de un patrón de platino-iridio guardado en Sèvres, Francia.\n",
+    "- **Segundo (s):** Inicialmente definido como $1/86,400$ del día solar medio, ahora se define como la duración de $9,192,631,770$ ciclos de la radiación emitida por la transición entre dos niveles del estado fundamental del átomo de *cesio-133*.\n",
     "\n",
     "**Unidad de Fuerza:**\n",
     "La unidad derivada de fuerza en el SI es el newton (N). Se define como la fuerza necesaria para proporcionar una aceleración de 1 m/s² a una masa de 1 kg:\n",
@@ -331,8 +343,8 @@
     "\n",
     "**Uso de Prefijos Adecuados:**\n",
     "Utilizar los prefijos adecuados ayuda a evitar números muy grandes o muy pequeños:\n",
-    "- **427.2 km** en lugar de **427200 m**.\n",
-    "- **2.16 mm** en lugar de **0.00216 m**.\n",
+    "- **$427.2 \\text{ km}$** en lugar de **$427200 \\text{ m}$**.\n",
+    "- **$2.16 \\text{ mm}$** en lugar de **$0.00216 \\text{ m}$**.\n",
     "\n",
     "Este sistema de unidades facilita la conversión y estandarización de medidas en diversos campos científicos y de ingeniería, promoviendo una comprensión y comunicación claras y precisas.\n",
     "\n",
@@ -439,14 +451,60 @@
    "cell_type": "markdown",
    "id": "d4d5b3a4",
    "metadata": {},
-   "source": []
+   "source": [
+    "#### Unidades de uso común en Estados Unidos (USA)"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "48edbb14",
    "metadata": {},
    "source": [
-    "## Estática de partículas"
+    "***Unidades Básicas:***\n",
+    "- **Longitud:** Pie (ft)\n",
+    "- **Fuerza:** Libra (lb)\n",
+    "- **Tiempo:** Segundo (s) (idéntico al del SI)\n",
+    "\n",
+    "***Definiciones:***\n",
+    "- **Pie (ft):** 0.3048 metros (m)\n",
+    "- **Libra (lb):** Peso de un patrón de platino (libra estándar) con una masa de 0.45359243 kilogramos (kg), ubicada al nivel del mar y a 45° de latitud para una fuerza de 1 lb debido a la gravedad terrestre.\n",
+    "\n",
+    "Estas unidades forman un sistema gravitacional, no absoluto, debido a su dependencia de la gravedad terrestre.\n",
+    "\n",
+    "\n",
+    "***Uso de la Libra como Unidad de Masa:***\n",
+    "- La libra estándar se usa como unidad de masa en comercio, pero no en cálculos de ingeniería.\n",
+    "- En ingeniería, la consistencia de unidades requiere una masa que, bajo una fuerza de 1 lb, tenga una aceleración de 1 pie/s², llamada **slug**.\n",
+    "  $$\n",
+    "  F = ma \\quad 1 \\, \\text{lb} = (1 \\, \\text{slug}) \\left(1 \\, \\text{pie} / \\text{s}^2\\right)\n",
+    "  $$\n",
+    "  $$\n",
+    "  1 \\, \\text{slug} = \\frac{1 \\, \\text{lb}}{1 \\, \\text{pie/s}^2} = 1 \\, \\text{lb} \\cdot \\text{s}^2 / \\text{pie}\n",
+    "  $$\n",
+    "- El **slug** es 32.2 veces la masa de una libra estándar.\n",
+    "\n",
+    "***Ventajas y Uso en Ingeniería:***\n",
+    "- En estática, el peso se mide en libras.\n",
+    "- En dinámica, donde intervienen fuerzas, masas y aceleraciones, la masa (m) se expresa en slugs cuando el peso (W) está en libras:\n",
+    "  $$\n",
+    "  m = \\frac{W}{g} \\quad \\text{donde} \\quad g = 32.2 \\, \\text{pies}/\\text{s}^2\n",
+    "  $$\n",
+    "\n",
+    "***Otras Unidades Comunes:***\n",
+    "- **Milla (mi):** 5280 pies\n",
+    "- **Pulgada (in):** $\\frac{1}{12}$ pie\n",
+    "- **Kilolibra (kip):** 1000 libras\n",
+    "- **Tonelada:** 2000 libras, convertida a slugs en cálculos de ingeniería.\n",
+    "\n",
+    "***Conversión de Unidades:***\n",
+    "La conversión de unidades en el sistema estadounidense puede ser más complicada que en el SI. Ejemplo de conversión de velocidad:\n",
+    "- **Velocidad:** 30 mi/h a pies/s:\n",
+    "  $$\n",
+    "  v = 30 \\, \\frac{\\text{mi}}{\\text{h}} \\times \\frac{5280 \\, \\text{pies}}{1 \\, \\text{mi}} \\times \\frac{1 \\, \\text{h}}{3600 \\, \\text{s}}\n",
+    "  $$\n",
+    "  $$\n",
+    "  v = 44 \\, \\frac{\\text{pies}}{\\text{s}}\n",
+    "  $$\n"
    ]
   },
   {
@@ -454,7 +512,7 @@
    "id": "174e1e86",
    "metadata": {},
    "source": [
-    "### Introducción al Concepto de Partícula"
+    "#### Conversión de Unidades entre el Sistema Internacional (SI) y el Sistema de Unidades de Uso Común en Estados Unidos"
    ]
   },
   {
@@ -462,40 +520,148 @@
    "id": "c7f91773",
    "metadata": {},
    "source": [
-    "En el contexto de este capítulo, el término \"partícula\" se utiliza para referirse a cuerpos cuyo tamaño y forma no influyen significativamente en la solución de problemas mecánicos. Esto implica que todas las fuerzas actuantes sobre un cuerpo se consideran como si estuvieran aplicadas en un solo punto, independientemente del tamaño real del cuerpo. Por ejemplo, en un modelo mecánico de la Vía Láctea, estructuras tan grandes como el Sol y el sistema solar podrían ser representadas simplemente como una partícula.\n",
+    "- ***Unidades de Longitud:*** Para convertir unidades de longitud entre el sistema estadounidense y el SI:\n",
+    "  - **Pie (ft):**\n",
+    "  $$  1 \\text{ pie} = 0.3048 \\, \\text{m}  $$\n",
+    "  - **Milla (mi):**\n",
+    "  $$  1 \\text{ mi} = 5280 \\text{ pies} = 5280 \\times 0.3048 \\, \\text{m} = 1609 \\, \\text{m} = 1.609 \\, \\text{km}  $$\n",
+    "  - **Pulgada (in):**\n",
+    "  $$  1 \\text{ pulg} = \\frac{1}{12} \\text{ pie} = \\frac{1}{12} \\times 0.3048 \\, \\text{m} = 0.0254 \\, \\text{m} = 25.4 \\, \\text{mm}  $$\n",
     "\n",
-    "- **Descomposición y Resultante de Fuerzas:** El primer objetivo del capítulo es enseñar cómo se pueden combinar dos o más fuerzas que actúan sobre una partícula en una única fuerza resultante que tiene el mismo efecto que las fuerzas originales. Esta técnica es fundamental para simplificar el análisis de sistemas físicos complejos y para entender cómo las fuerzas combinadas afectan a un objeto.\n",
-    "<p>&nbsp;</p>\n",
+    "- ***Unidades de Fuerza:*** Para convertir unidades de fuerza:\n",
+    "  - **Libra (lb):**\n",
+    "  $$  1 \\text{ lb} = (0.4536 \\, \\text{kg}) \\times (9.807 \\, \\text{m/s}^2) = 4.448 \\, \\text{N}  $$\n",
     "\n",
-    "- **Equilibrio de Fuerzas en un Plano:** La primera parte del capítulo se concentra en el estudio de fuerzas que actúan en un mismo plano, lo que es común en muchos problemas prácticos de la mecánica. Un ejemplo típico sería una caja suspendida por dos cadenas, donde las fuerzas en cada cadena y la gravedad interactúan para mantener la caja en equilibrio.\n",
-    "<p>&nbsp;</p>\n",
+    "- ***Unidades de Masa:*** La masa en el sistema estadounidense se mide en slugs, que es una unidad derivada. Para convertir:\n",
+    "  - **Slug:**\n",
+    "  $$1 \\text{ slug} = 1 \\text{ lb} \\cdot \\text{s}^2 / \\text{pie} = \\frac{1 \\text{ lb}}{1 \\text{ pie/s}^2} = \\frac{4.448 \\text{ N}}{0.3048 \\text{ m/s}^2} = 14.59 \\, \\text{N} \\cdot \\text{s}^2 / \\text{m} = 14.59 \\, \\text{kg}$$\n",
+    "  - **Libra masa:**\n",
+    "  $$1 \\text{ libra masa} = 0.4536 \\, \\text{kg}$$\n",
     "\n",
-    "- **Fuerzas en el Espacio Tridimensional:** Posteriormente, el capítulo avanza hacia una situación más compleja analizando las fuerzas en un espacio tridimensional. Este análisis es crucial para aplicaciones reales donde las fuerzas no se limitan a un solo plano, como en el caso de estructuras que deben soportar cargas distribuidas de manera irregular o en diferentes direcciones.\n"
+    "- ***Conversión de Unidades Derivadas:*** Para convertir unidades derivadas:\n",
+    "  - **Momento de una Fuerza:**\n",
+    "  $$M = 47 \\text{ lb} \\cdot \\text{ pulg} = 47 \\times 4.448 \\text{ N} \\times 25.4 \\text{ mm} = 5310 \\text{ N} \\cdot \\text{ mm} = 5.31 \\text{ N} \\cdot \\text{ m}$$\n",
+    "\n",
+    "Para convertir de unidades del SI a unidades de uso común en Estados Unidos:\n",
+    "  - **Momento de una Fuerza:**\n",
+    "  $$M = 40 \\text{ N} \\cdot \\text{ m} = 40 \\text{ N} \\cdot \\text{ m} \\times \\left(\\frac{1 \\text{ lb}}{4.448 \\text{ N}}\\right) \\times \\left(\\frac{1 \\text{ pie}}{0.3048 \\text{ m}}\\right) = 29.5 \\text{ lb} \\cdot \\text{ pie}$$\n",
+    "\n",
+    "- ***Factores de Conversión Frecuentes***\n",
+    "  - **$1 \\text{ pie} = 0.3048  \\text{ m}$**\n",
+    "  - **$1  \\text{ mi} = 1.609  \\text{ km}$**\n",
+    "  - **$1  \\text{ pulg} = 25.4  \\text{ mm}$**\n",
+    "  - **$1  \\text{ lb} = 4.448  \\text{ N}$**\n",
+    "  - **$1  \\text{ slug} = 14.59  \\text{ kg}$**\n",
+    "\n",
+    "En la siguiente tabla se resumen estos factores de conversión:\n",
+    "\n",
+    "$$\n",
+    "\\begin{array}{|c|c|c|}\n",
+    "\\hline \\text { Cantidad } & \\text { Unidad de uso común en EU } & \\text { Equivalente del SI } \\\\\n",
+    "\\hline \\text { Aceleración } & \\begin{array}{l}\n",
+    "\\text { pie/s } \\\\\n",
+    "\\text { pulg } / \\mathrm{s}^2\n",
+    "\\end{array} & \\begin{array}{l}\n",
+    "0.3048 \\mathrm{~m} / \\mathrm{s}^2 \\\\\n",
+    "0.0254 \\mathrm{~m} / \\mathrm{s}^2\n",
+    "\\end{array} \\\\\n",
+    "\\hline \\text { Área } & \\begin{array}{l}\n",
+    "\\text { pie }^2 \\\\\n",
+    "\\text { pulg }^2\n",
+    "\\end{array} & \\begin{array}{c}\n",
+    "0.0929 \\mathrm{~m}^2 \\\\\n",
+    "645.2 \\mathrm{~mm}^2\n",
+    "\\end{array} \\\\\n",
+    "\\hline \\text { Energía } & \\text { pie } \\cdot \\mathrm{lb} & 1.356 \\mathrm{~J} \\\\\n",
+    "\\hline \\text { Fuerza } & \\begin{array}{l}\n",
+    "\\text { kip } \\\\\n",
+    "\\text { lb }\n",
+    "\\end{array} & \\begin{array}{l}\n",
+    "4.448 \\mathrm{kN} \\\\\n",
+    "4.448 \\mathrm{~N} \\\\\n",
+    "0.2780 \\mathrm{~N}\n",
+    "\\end{array} \\\\\n",
+    "\\hline \\text { Impulso } & \\mathrm{lb} \\cdot \\mathrm{s} & 4.448 \\mathrm{~N} \\cdot \\mathrm{s} \\\\\n",
+    "\\hline \\text { Longitud } & \\begin{array}{l}\n",
+    "\\text { pie } \\\\\n",
+    "\\text { pulg } \\\\\n",
+    "\\mathrm{mi}\n",
+    "\\end{array} & \\begin{array}{c}\n",
+    "0.3048 \\mathrm{~m} \\\\\n",
+    "25.40 \\mathrm{~mm} \\\\\n",
+    "1.609 \\mathrm{~km}\n",
+    "\\end{array} \\\\\n",
+    "\\hline \\text { Masa } & \\begin{array}{l}\n",
+    "\\text { oz masa } \\\\\n",
+    "\\text { lb masa } \\\\\n",
+    "\\text { slug } \\\\\n",
+    "\\text { short ton (tonelada corta) }\n",
+    "\\end{array} & \\begin{array}{c}\n",
+    "28.35 \\mathrm{~g} \\\\\n",
+    "0.4536 \\mathrm{~kg} \\\\\n",
+    "14.59 \\mathrm{~kg} \\\\\n",
+    "907.2 \\mathrm{~kg}\n",
+    "\\end{array} \\\\\n",
+    "\\hline \\text { Momento de una fuerza } & \\begin{array}{l}\n",
+    "\\mathrm{lb} \\cdot \\text { pie } \\\\\n",
+    "\\mathrm{lb} \\cdot \\text { pulg }\n",
+    "\\end{array} & \\begin{array}{l}\n",
+    "1.356 \\mathrm{~N} \\cdot \\mathrm{m} \\\\\n",
+    "0.1130 \\mathrm{~N} \\cdot \\mathrm{m}\n",
+    "\\end{array} \\\\\n",
+    "\\hline \\begin{array}{l}\n",
+    "\\text { Momento de inercia } \\\\\n",
+    "\\text { de un área } \\\\\n",
+    "\\text { de una masa }\n",
+    "\\end{array} & \\begin{array}{l}\n",
+    "\\mathrm{pulg}^4 \\\\\n",
+    "\\mathrm{lb} \\cdot \\mathrm{pie}^2 \\cdot \\mathrm{s}^2\n",
+    "\\end{array} & \\begin{array}{c}\n",
+    "0.4162 \\times 10^6 \\mathrm{~mm}^4 \\\\\n",
+    "1.356 \\mathrm{~kg} \\cdot \\mathrm{m}^2\n",
+    "\\end{array} \\\\\n",
+    "\\hline \\text { Cantidad de movimiento } & \\mathrm{lb} \\cdot \\mathrm{s} & 4.448 \\mathrm{~kg} \\cdot \\mathrm{m} / \\mathrm{s} \\\\\n",
+    "\\hline \\text { Potencia } & \\begin{array}{l}\n",
+    "\\text { pie } \\cdot \\mathrm{lb} / \\mathrm{s} \\\\\n",
+    "\\text { hp }\n",
+    "\\end{array} & \\begin{array}{c}\n",
+    "1.356 \\mathrm{~W} \\\\\n",
+    "745.7 \\mathrm{~W}\n",
+    "\\end{array} \\\\\n",
+    "\\hline \\text { Presión o esfuerzo } & \\begin{array}{l}\n",
+    "\\text { lb/pie }{ }^2 \\\\\n",
+    "\\text { lb/pulg }{ }^2(\\mathrm{psi})\n",
+    "\\end{array} & \\begin{array}{c}\n",
+    "47.88 \\mathrm{~Pa} \\\\\n",
+    "6.895 \\mathrm{kPa}\n",
+    "\\end{array} \\\\\n",
+    "\\hline \\text { Velocidad } & \\begin{array}{l}\n",
+    "\\mathrm{pie} / \\mathrm{s} \\\\\n",
+    "\\mathrm{pulg} / \\mathrm{s} \\\\\n",
+    "\\mathrm{mi} / \\mathrm{h}(\\mathrm{mph}) \\\\\n",
+    "\\mathrm{mi} / \\mathrm{h}(\\mathrm{mph})\n",
+    "\\end{array} & \\begin{array}{l}\n",
+    "0.3048 \\mathrm{~m} / \\mathrm{s} \\\\\n",
+    "0.0254 \\mathrm{~m} / \\mathrm{s} \\\\\n",
+    "0.4470 \\mathrm{~m} / \\mathrm{s} \\\\\n",
+    "1.609 \\mathrm{~km} / \\mathrm{h}\n",
+    "\\end{array} \\\\\n",
+    "\\hline \\text { Volumen } & \\begin{array}{l}\n",
+    "\\text { pie }^3 \\\\\n",
+    "\\text { pulg }^3\n",
+    "\\end{array} & \\begin{array}{l}\n",
+    "1.002832 \\mathrm{~m}^3 \\\\\n",
+    "16.39 \\mathrm{~cm}^3\n",
+    "\\end{array} \\\\\n",
+    "\\hline \\text { Líquidos } & \\text { gal } & \\begin{array}{l}\n",
+    "3.785 \\mathrm{~L} \\\\\n",
+    "0.9464 \\mathrm{~L}\n",
+    "\\end{array} \\\\\n",
+    "\\hline \\text { Trabajo } & \\text { pie } \\cdot \\mathrm{lb} & 1.356 \\mathrm{~J} \\\\\n",
+    "\\hline\n",
+    "\\end{array}\n",
+    "$$\n"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a4e91d1c",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ca1f6c70",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f8122468",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b2c9df74",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
