--- a/S09_EstaticaParticulas.ipynb
+++ b/S09_EstaticaParticulas.ipynb
@@ -568,6 +568,346 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5cda3520",
+   "metadata": {},
+   "source": [
+    "- ***Ejemplo 05:*** Un lanchón es arrastrado por dos remolcadores. Si la resultante de las fuerzas ejercidas por los remolcadores es una fuerza de $5000 \\text{ lb}$ dirigida a lo largo del eje del lanchón, determine: $a)$ la tensión en cada una de las cuerdas, sabiendo que $\\alpha =45^\\circ$, y $b)$ el valor de $\\alpha$ tal que la tensión en la cuerda 2 sea mínima.\n",
+    "\n",
+    "<p float=\"center\">\n",
+    "  <img src=\"https://github.com/carlosalvarezh/Geometria_Analitica_Vectorial/blob/main/Images/Mecanica18_Ejemplo05.PNG?raw=true\" width=\"200\" />\n",
+    "</p>\n",
+    "\n",
+    "Este es un problema de dos fuerzas coplanares. La primera parte se puede resolver en forma gráfica o analítica. En la segunda parte, la solución gráfica muestra la dirección necesaria de la cuerda 2 y se puede usar la solución analítica para completar la solución.\n",
+    "\n",
+    "Se puede usar la regla del paralelogramo o la regla del triángulo para resolver la parte $a$ ). Para la parte $b$ ) se usa una variante de la regla del triángulo.\n",
+    "\n",
+    "***a) Tensión para $\\alpha=45^{\\circ}$***\n",
+    "\n",
+    "- ***Solución gráfica:*** Se emplea la ley del paralelogramo; se sabe que la diagonal (resultante) es igual a $5000 \\mathrm{lb}$ y que está dirigida hacia la derecha; los lados se dibujan paralelos a las cuerdas (figura 1). \n",
+    "\n",
+    "<p float=\"center\">\n",
+    "  <img src=\"https://github.com/carlosalvarezh/Geometria_Analitica_Vectorial/blob/main/Images/Mecanica18a_Ejemplo05.PNG?raw=true\" width=\"200\" />\n",
+    "</p>\n",
+    "\n",
+    "Si el dibujo se hace a escala puede medirse\n",
+    "\n",
+    "$$T_1=3700 \\mathrm{lb} \\quad T_2=2600 \\mathrm{lb}$$\n",
+    "\n",
+    "- ***Solución trigonométrica:*** Puede usarse la regla del triángulo. Observe que el triángulo mostrado en la figura 2 representa la mitad del paralelogramo de la figura anterior. \n",
+    "\n",
+    "<p float=\"center\">\n",
+    "  <img src=\"https://github.com/carlosalvarezh/Geometria_Analitica_Vectorial/blob/main/Images/Mecanica18b_Ejemplo05.PNG?raw=true\" width=\"200\" />\n",
+    "</p>\n",
+    "\n",
+    "Si se emplea la ley de los senos, se escribe\n",
+    "$$\\frac{T_1}{\\operatorname{sen} 45^{\\circ}}=\\frac{T_2}{\\operatorname{sen} 30^{\\circ}}=\\frac{5000 \\mathrm{lb}}{\\operatorname{sen} 105^{\\circ}}$$\n",
+    "\n",
+    "Con la calculadora, primero se calcula y se almacena el valor del último cociente. Al multiplicar este valor sucesivamente por sen $45^{\\circ}$ y sen $30^{\\circ}$ se obtiene\n",
+    "$$T_1=3660 \\mathrm{lb} \\quad T_2=2590 \\mathrm{lb}$$\n",
+    "\n",
+    "b) Valor de $\\alpha$ para $T_2$ mínima. Para determinar el valor de $\\alpha$ tal que la tensión de la cuerda 2 sea mínima se usa otra vez la regla del triángulo. En la figura siguiente, la línea 1-1' es la dirección de $\\mathbf{T}_1$. \n",
+    "\n",
+    "<p float=\"center\">\n",
+    "  <img src=\"https://github.com/carlosalvarezh/Geometria_Analitica_Vectorial/blob/main/Images/Mecanica18c_Ejemplo05.PNG?raw=true\" width=\"200\" />\n",
+    "</p>\n",
+    "\n",
+    "Las líneas 2-2' indican varias direcciones posibles de $\\mathbf{T}_2$. Observe que el mínimo valor de $T_2$ ocurre cuando $\\mathbf{T}_1$ y $\\mathbf{T}_2$ son perpendiculares.\n",
+    "\n",
+    "<p float=\"center\">\n",
+    "  <img src=\"https://github.com/carlosalvarezh/Geometria_Analitica_Vectorial/blob/main/Images/Mecanica18d_Ejemplo05.PNG?raw=true\" width=\"200\" />\n",
+    "</p>\n",
+    "\n",
+    "El valor mínimo de $T_2$ es\n",
+    "$$\n",
+    "T_2=(5000 \\mathrm{lb}) \\operatorname{sen} 30^{\\circ}=2500 \\mathrm{lb}\n",
+    "$$\n",
+    "\n",
+    "Los valores correspondientes de $T_1$ y $\\alpha$ son\n",
+    "$$\n",
+    "\\begin{aligned}\n",
+    "T_1 & =(5000 \\mathrm{lb}) \\cos 30^{\\circ}=4330 \\mathrm{lb} & \\\\\n",
+    "\\alpha & =90^{\\circ}-30^{\\circ} & \\alpha=60^{\\circ}\n",
+    "\\end{aligned}\n",
+    "$$\n",
+    "\n",
+    "La parte a) es una aplicación directa de la descomposición de vectores en sus componentes. La clave de la parte $b$ ) es reconocer que el valor mínimo de $T_2$ ocurre cuando $\\mathbf{T}_1$ y $\\mathbf{T}_2$ son perpendiculares."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "66433269",
+   "metadata": {},
+   "source": [
+    "- ***Ejemplo 06:*** \n",
+    "\n",
+    "<p float=\"center\">\n",
+    "  <img src=\"https://github.com/carlosalvarezh/Geometria_Analitica_Vectorial/blob/main/Images/Mecanica19_Ejemplo06.PNG?raw=true\" width=\"200\" />\n",
+    "</p>\n",
+    "\n",
+    "El collarín $A$ se desliza sin fricción sobre una barra horizontal y está conectado a una carga de $50 \\text{ lb}$, como se muestra en la figura. Determine la magnitud de la fuerza $P$ requerida para mantener el collarín en equilibrio cuando $a)$ $x = 4.5 \\text{ pulg}$ y $b)$ $x = 15 \\text{ pulg}$.\n",
+    "\n",
+    "***Paso 1: Diagrama de Cuerpo Libre:*** Para resolver el problema, primero dibujamos el diagrama de cuerpo libre del sistema. Consideramos todas las fuerzas actuando en el collarín $ A $.\n",
+    "\n",
+    "Fuerzas actuantes en $ A $:\n",
+    "1. Fuerza $ P $ en dirección horizontal (hacia la izquierda).\n",
+    "2. Tensión en la cuerda, $ T $, que forma un ángulo con la barra horizontal.\n",
+    "3. La fuerza de reacción de la barra, que no consideraremos porque el collarín está en equilibrio sin fricción.\n",
+    "\n",
+    "***Paso 2: Descomposición de Fuerzas:*** Descomponemos la tensión $ T $ en sus componentes horizontales y verticales:\n",
+    "- Componente horizontal de $ T $: $ T_x = T \\cos \\theta $\n",
+    "- Componente vertical de $ T $: $ T_y = T \\sin \\theta $\n",
+    "\n",
+    "***Paso 3: Determinación del Ángulo $ \\theta $:*** El ángulo $ \\theta $ puede determinarse usando la distancia horizontal $ x $ y la distancia vertical de 20 pulgadas:\n",
+    "$$\\tan \\theta = \\frac{20}{x} \\quad \\Rightarrow \\quad \\theta = \\tan^{-1}\\left(\\frac{20}{x}\\right)$$\n",
+    "\n",
+    "***Paso 4: Condiciones de Equilibrio:*** Para que el collarín esté en equilibrio, la suma de las fuerzas horizontales y verticales debe ser cero.\n",
+    "\n",
+    "- **Eje Horizontal:**\n",
+    "$$\\sum F_x = 0 \\quad \\Rightarrow \\quad P = T \\cos \\theta$$\n",
+    "\n",
+    "- **Eje Vertical:**\n",
+    "$$\\sum F_y = 0 \\quad \\Rightarrow \\quad T \\sin \\theta = 50 \\, \\text{lb}$$\n",
+    "\n",
+    "***Paso 5: Solución para $ T $:*** Usamos la ecuación del eje vertical para encontrar $ T $:\n",
+    "$$T = \\frac{50 \\, \\text{lb}}{\\sin \\theta}$$\n",
+    "\n",
+    "***Paso 6: Sustitución en la Ecuación Horizontal:*** Sustituimos $ T $ en la ecuación horizontal:\n",
+    "$$P = \\left( \\frac{50 \\, \\text{lb}}{\\sin \\theta} \\right) \\cos \\theta = 50 \\, \\text{lb} \\cot \\theta$$\n",
+    "\n",
+    "***Cálculos para $ x = 4.5 $ pulgadas:***\n",
+    "1. Determinación del ángulo $ \\theta $:\n",
+    "$$\\theta = \\tan^{-1}\\left(\\frac{20}{4.5}\\right) = \\tan^{-1}(4.444) \\approx 77.47^\\circ$$\n",
+    "\n",
+    "2. Determinación de $ \\sin \\theta $ y $ \\cos \\theta $:\n",
+    "$$\\sin \\theta \\approx 0.974 \\quad \\text{y} \\quad \\cos \\theta \\approx 0.225$$\n",
+    "\n",
+    "3. Determinación de $ T $:\n",
+    "$$T = \\frac{50 \\, \\text{lb}}{\\sin 77.47^\\circ} \\approx \\frac{50 \\, \\text{lb}}{0.974} \\approx 51.34 \\, \\text{lb}$$\n",
+    "\n",
+    "4. Determinación de $ P $:\n",
+    "$$P = 51.34 \\, \\text{lb} \\times \\cos 77.47^\\circ \\approx 51.34 \\, \\text{lb} \\times 0.225 \\approx 11.55 \\, \\text{lb}$$\n",
+    "\n",
+    "***Cálculos para $ x = 15 $ pulgadas:***\n",
+    "1. Determinación del ángulo $ \\theta $:\n",
+    "$$\\theta = \\tan^{-1}\\left(\\frac{20}{15}\\right) = \\tan^{-1}(1.333) \\approx 53.13^\\circ$$\n",
+    "\n",
+    "2. Determinación de $ \\sin \\theta $ y $ \\cos \\theta $:\n",
+    "$$\\sin \\theta \\approx 0.8 \\quad \\text{y} \\quad \\cos \\theta \\approx 0.6$$\n",
+    "\n",
+    "3. Determinación de $ T $:\n",
+    "$$T = \\frac{50 \\, \\text{lb}}{\\sin 53.13^\\circ} \\approx \\frac{50 \\, \\text{lb}}{0.8} \\approx 62.5 \\, \\text{lb}$$\n",
+    "\n",
+    "4. Determinación de $ P $:\n",
+    "$$P = 62.5 \\, \\text{lb} \\times \\cos 53.13^\\circ \\approx 62.5 \\, \\text{lb} \\times 0.6 \\approx 37.5 \\, \\text{lb}$$\n",
+    "\n",
+    "***Resultados***\n",
+    "- Para $ x = 4.5 $ pulgadas, la fuerza $ P $ requerida es aproximadamente $ 11.55 $ lb.\n",
+    "- Para $ x = 15 $ pulgadas, la fuerza $ P $ requerida es aproximadamente $ 37.5 $ lb."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "566da355",
+   "metadata": {},
+   "source": [
+    "- ***Ejemplo 07:*** \n",
+    "\n",
+    "<p float=\"center\">\n",
+    "  <img src=\"https://github.com/carlosalvarezh/Geometria_Analitica_Vectorial/blob/main/Images/Mecanica20_Ejemplo07.PNG?raw=true\" width=\"200\" />\n",
+    "</p>\n",
+    "\n",
+    "$a)$ Determine el estiramiento en cada resorte para lograr el equilibrio del bloque de $2 \\text{ kg}$. Los resortes se muestran en la posición de equilibrio.\n",
+    "\n",
+    "$b)$ La longitud sin estirar del resorte $AB$ es de $3 \\text{ m}$. Si el bloque se mantiene en la posición de equilibrio mostrada, determine la masa del bloque en $D$.\n",
+    "\n",
+    "***Datos Iniciales:***\n",
+    "- Constantes de los resortes:\n",
+    "  $$\n",
+    "  k_{AC} = 20 \\, \\text{N/m}, \\quad k_{AB} = 30 \\, \\text{N/m}, \\quad k_{AD} = 40 \\, \\text{N/m}\n",
+    "  $$\n",
+    "- Longitud de los segmentos:\n",
+    "  $$\n",
+    "  AB = 4 \\, \\text{m}, \\quad AC = 3 \\, \\text{m}, \\quad AD = 3 \\, \\text{m}\n",
+    "  $$\n",
+    "- Bloque de masa:\n",
+    "  $$\n",
+    "  m_D = 2 \\, \\text{kg}\n",
+    "  $$\n",
+    "- Aceleración debido a la gravedad:\n",
+    "  $$\n",
+    "  g = 9.81 \\, \\text{m/s}^2\n",
+    "  $$\n",
+    "- Peso del bloque:\n",
+    "  $$\n",
+    "  W_D = m_D g = 2 \\, \\text{kg} \\times 9.81 \\, \\text{m/s}^2 = 19.62 \\, \\text{N}\n",
+    "  $$\n",
+    "\n",
+    "***a): Determinar el Estiramiento en Cada Resorte para Lograr el Equilibrio***\n",
+    "\n",
+    "***Paso 1: Definir el Sistema de Coordenadas y Diagrama de Cuerpo Libre:*** Ubicamos el punto $ A $ en el origen del sistema de coordenadas $(0,0)$.\n",
+    "\n",
+    "***Paso 2: Posición de los Puntos:***\n",
+    "\n",
+    "- Punto $ B $ en $(4,3)$\n",
+    "- Punto $ C $ en $(-3,3)$\n",
+    "- Punto $ D $ en $(0, -3)$\n",
+    "\n",
+    "***Paso 3: Longitudes Naturales de los Resortes en Equilibrio***\n",
+    "\n",
+    "- **Longitud sin estirar del resorte $ AB $:** 3 m\n",
+    "\n",
+    "***Paso 4: Determinar las Deformaciones de los Resortes*** Utilizamos la ecuación de la longitud de un vector para determinar las longitudes actuales de los resortes:\n",
+    "\n",
+    "1. **Resorte $ AB $:**\n",
+    "   $$\n",
+    "   L_{AB} = \\sqrt{(4-0)^2 + (3-0)^2} = \\sqrt{16 + 9} = \\sqrt{25} = 5 \\, \\text{m}\n",
+    "   $$\n",
+    "   $$\n",
+    "   \\Delta L_{AB} = L_{AB} - L_{AB,\\text{sin estirar}} = 5 \\, \\text{m} - 3 \\, \\text{m} = 2 \\, \\text{m}\n",
+    "   $$\n",
+    "\n",
+    "2. **Resorte $ AC $:**\n",
+    "   $$\n",
+    "   L_{AC} = \\sqrt{(-3-0)^2 + (3-0)^2} = \\sqrt{9 + 9} = \\sqrt{18} = 3\\sqrt{2} \\, \\text{m}\n",
+    "   $$\n",
+    "   $$\n",
+    "   \\Delta L_{AC} = L_{AC} - L_{AC,\\text{sin estirar}} = 3\\sqrt{2} \\, \\text{m} - 3 \\, \\text{m} = 3(\\sqrt{2} - 1) \\, \\text{m} \\approx 1.24 \\, \\text{m}\n",
+    "   $$\n",
+    "\n",
+    "3. **Resorte $ AD $:**\n",
+    "   $$\n",
+    "   L_{AD} = \\sqrt{(0-0)^2 + (-3-0)^2} = \\sqrt{9} = 3 \\, \\text{m}\n",
+    "   $$\n",
+    "   $$\n",
+    "   \\Delta L_{AD} = L_{AD} - L_{AD,\\text{sin estirar}} = 3 \\, \\text{m} - 3 \\, \\text{m} = 0 \\, \\text{m}\n",
+    "   $$\n",
+    "\n",
+    "***Paso 5: Fuerzas en los Resortes:*** Las fuerzas en los resortes se calculan usando la ley de Hooke $ F = k \\Delta L $:\n",
+    "\n",
+    "1. **Resorte $ AB $:**\n",
+    "   $$\n",
+    "   F_{AB} = k_{AB} \\Delta L_{AB} = 30 \\, \\text{N/m} \\times 2 \\, \\text{m} = 60 \\, \\text{N}\n",
+    "   $$\n",
+    "\n",
+    "2. **Resorte $ AC $:**\n",
+    "   $$\n",
+    "   F_{AC} = k_{AC} \\Delta L_{AC} = 20 \\, \\text{N/m} \\times 1.24 \\, \\text{m} = 24.8 \\, \\text{N}\n",
+    "   $$\n",
+    "\n",
+    "3. **Resorte $ AD $:**\n",
+    "   $$\n",
+    "   F_{AD} = k_{AD} \\Delta L_{AD} = 40 \\, \\text{N/m} \\times 0 \\, \\text{m} = 0 \\, \\text{N}\n",
+    "   $$\n",
+    "   \n",
+    "***b): Determinar la Masa del Bloque en $ D $ si el Bloque se Mantiene en la Posición de Equilibrio***\n",
+    "\n",
+    "Sabemos que en equilibrio la suma de las fuerzas en $ y $ debe ser igual al peso del bloque.\n",
+    "\n",
+    "***Fuerza Vertical del Resorte $ AD $***\n",
+    "$$\n",
+    "F_{AD} = k_{AD} \\Delta L_{AD}\n",
+    "$$\n",
+    "Donde $ \\Delta L_{AD} = \\frac{W_D}{k_{AD}} $\n",
+    "$$\n",
+    "W_D = k_{AD} \\Delta L_{AD} = 40 \\, \\text{N/m} \\times 0 \\, \\text{m} = 0 \\, \\text{N}\n",
+    "$$\n",
+    "\n",
+    "***Resultados***\n",
+    "\n",
+    "- El estiramiento de cada resorte:\n",
+    "  $$\n",
+    "  \\Delta L_{AB} = 2 \\, \\text{m}, \\quad \\Delta L_{AC} \\approx 1.24 \\, \\text{m}, \\quad \\Delta L_{AD} = 0 \\, \\text{m}\n",
+    "  $$\n",
+    "\n",
+    "- La fuerza $ P $ para mantener el equilibrio:\n",
+    "  $$\n",
+    "  F_{AB} = 60 \\, \\text{N}, \\quad F_{AC} = 24.8 \\, \\text{N}, \\quad F_{AD} = 0 \\, \\text{N}\n",
+    "  $$\n",
+    "\n",
+    "- La masa del bloque en $ D $ en equilibrio es:\n",
+    "  $$\n",
+    "  m_D = 2 \\, \\text{kg}\n",
+    "  $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "af995830",
+   "metadata": {},
+   "source": [
+    "- ***Ejemplo 08:*** \n",
+    "\n",
+    "<p float=\"center\">\n",
+    "  <img src=\"https://github.com/carlosalvarezh/Geometria_Analitica_Vectorial/blob/main/Images/Mecanica21_Ejemplo08.PNG?raw=true\" width=\"100\" />\n",
+    "</p>\n",
+    "\n",
+    "Una caja de madera de $200 kg$ está sostenida por varios arreglos de poleas y cuerdas como se muestra en la figura. Determine la magnitud y dirección de la fuerza $P$ que debe ejercerse en el extremo libre de la cuerda para mantener al sistema en equilibrio. (Sugerencia: La tensión es la misma en ambos lados de una cuerda que pasa por una polea simple).\n",
+    "\n",
+    "\n",
+    "***Datos Iniciales***\n",
+    "- Masa de la caja de madera ($ m $): 200 kg\n",
+    "- Aceleración debida a la gravedad ($ g $): 9.81 m/s²\n",
+    "\n",
+    "***Paso 1: Determinación del Peso de la Caja*** El peso de la caja ($ W $) se calcula como:\n",
+    "$$\n",
+    "W = m \\cdot g = 200 \\, \\text{kg} \\cdot 9.81 \\, \\text{m/s}^2 = 1962 \\, \\text{N}\n",
+    "$$\n",
+    "\n",
+    "***Paso 2: Análisis del Sistema de Poleas*** La figura muestra un sistema de poleas que incluye una polea fija en $ B $ y una polea móvil en $ A $. La caja está suspendida de la polea móvil.\n",
+    "\n",
+    "***Paso 3: Fuerzas en la Polea Móvil*** En una polea móvil, la tensión en la cuerda es igual en ambos lados de la polea. Si $ T $ es la tensión en la cuerda, entonces la polea móvil experimenta una fuerza hacia arriba de $ 2T $ debido a las dos secciones de la cuerda que la sostienen. Esta fuerza debe equilibrar el peso de la caja.\n",
+    "\n",
+    "Para el equilibrio de la polea móvil:\n",
+    "$$\n",
+    "2T = W\n",
+    "$$\n",
+    "$$\n",
+    "2T = 1962 \\, \\text{N}\n",
+    "$$\n",
+    "$$\n",
+    "T = \\frac{1962 \\, \\text{N}}{2} = 981 \\, \\text{N}\n",
+    "$$\n",
+    "\n",
+    "***Paso 4: Fuerza en el Extremo Libre de la Cuerda*** La cuerda pasa por la polea fija en $ B $, y la fuerza $ P $ aplicada en el extremo libre de la cuerda debe equilibrar la tensión en la cuerda.\n",
+    "\n",
+    "La tensión $ T $ en la cuerda es de 981 N. La fuerza $ P $ es igual a la tensión en la cuerda:\n",
+    "$$\n",
+    "P = 981 \\, \\text{N}\n",
+    "$$\n",
+    "\n",
+    "***Paso 5: Dirección de la Fuerza $ P $*** La dirección de la fuerza $ P $ se puede determinar considerando el ángulo $ \\alpha $ que forma con la horizontal. Para mantener el equilibrio del sistema, la fuerza $ P $ debe aplicarse en la misma dirección que la cuerda que sale de la polea fija en $ B $.\n",
+    "\n",
+    "La longitud vertical entre $ A $ y $ B $ es de 2.4 m, y la distancia horizontal desde $ B $ hasta el punto donde la cuerda cambia de dirección es de 0.75 m.\n",
+    "\n",
+    "Para encontrar el ángulo $ \\alpha $:\n",
+    "$$\n",
+    "\\tan \\alpha = \\frac{\\text{altura}}{\\text{base}} = \\frac{2.4 \\, \\text{m}}{0.75 \\, \\text{m}} = 3.2\n",
+    "$$\n",
+    "$$\n",
+    "\\alpha = \\tan^{-1}(3.2) \\approx 72.65^\\circ\n",
+    "$$\n",
+    "\n",
+    "***Resultados***\n",
+    "- La magnitud de la fuerza $ P $ requerida es:\n",
+    "  $$\n",
+    "  P = 981 \\, \\text{N}\n",
+    "  $$\n",
+    "- La dirección de la fuerza $ P $ es un ángulo de:\n",
+    "  $$\n",
+    "  \\alpha \\approx 72.65^\\circ \\text{ con respecto a la horizontal}\n",
+    "  $$\n",
+    "\n",
+    "Por lo tanto, la fuerza $ P $ necesaria para mantener el sistema en equilibrio tiene una magnitud de 981 N y debe aplicarse en una dirección que forma un ángulo de 72.65° con la horizontal."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d32217c2",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "id": "b4ab32fa",
    "metadata": {},
    "source": [
